 - API: A lot more configuration options for the ScreenDockStation, these configurations are done by the ScreenDockWindowConfiguration.
 ! API: PaintableComponent uses now a transparency enumeration instead of two booleans 
 - API: ScreenDockWindows can be transparent
 - API: AbstractDockTitle has been divided into two classes, there is no need to change code in the subclasses of AbstractDockTitle
 ! API: DockActions now support icons that are shown if the mouse hovers of the action, or if the mouse is pressed. Clients just using the DockAction interface should compile without changes, but subclasses of DockAction will require updates.
 - API: The window that shows up when moving a dockable (DefaultDockRelocator.ImageWindow) is now transparent
 - API: Can set the border of a ScreenDockWindow
 ! API: MovingImage now can set an offset and is informed if the underlying window is transparent
 ! API: NoTitleDisplayer gets replaced by NoTitleBarDisplayer. The new displayer extends BasicDockableDisplayer (now all displayer are derived from this class) and is able to show a DockTitle if asked to do so. 
 - Bugfix: The "showing" property is now checked for correctness when the DockController of a Dockable changes.
 - Bugfix: Resizing a ScreenDockWindow to a size smaller than its acceptable minimum will no longer move the window.
 - API: The new WizardSplitDockStation is a SplitDockStation that does keep its children in columns. It does store the size of children as pixels, not as ratios. 
 - API: The ScreenDropSizeStrategy allows to influence the size a dropped Dockable on a ScreenDockStation gets 
 - Bugfix: StackDockStation could throw exception during drag and drop when having only one child
 - Bugfix: ToolbarTabDockStation respects and forwards the orientation of its parent
 - API: Added tutorials to show how to use toolbars
 - API: DefaultExtendedModeEnablement offers now an extension
  
[Todo]
- Drop StackDockStation over Dockable and merge them